# neqsim-community-skills

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  community-skills.yaml  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: governance.md  repository-structure.md  skill-standard.md  validation-guidelines.md  where-does-this-go.md
scripts/: validate_skill_manifests.py
skills/: test_skill_manifest_schema.py  test_skill_metadata.py
skills/engineering-data/document-intelligence-extraction/: README.md  pyproject.toml
skills/engineering-data/document-intelligence-extraction/examples/: build_evidence_package.py
skills/engineering-data/document-intelligence-extraction/src/document_intelligence_extraction/: __init__.py  model.py
skills/engineering-data/document-intelligence-extraction/tests/: test_document_intelligence.py
skills/environment/co2-emissions-screening/: README.md  SKILL.md  pyproject.toml
skills/environment/energy-emissions-screening/: README.md  SKILL.md  pyproject.toml
skills/field-development/artificial-lift-screening/: README.md  SKILL.md  pyproject.toml
skills/field-development/asset-value-npv-screening/: README.md  SKILL.md  pyproject.toml
skills/field-development/capex-opex-screening/: README.md  SKILL.md  pyproject.toml
skills/field-development/design-basis-screening/: README.md  SKILL.md  pyproject.toml
skills/field-development/economy-basis-screening/: README.md  SKILL.md  pyproject.toml
skills/field-development/norwegian-continental-shelf-data/: README.md  SKILL.md  pyproject.toml
skills/field-development/norwegian-continental-shelf-data/examples/: basic_ncs_data.py
skills/field-development/norwegian-continental-shelf-data/src/norwegian_continental_shelf_data/: __init__.py  analysis.py  carbon.py  dataset.py  decline.py  sources.py
skills/field-development/norwegian-continental-shelf-data/src/norwegian_continental_shelf_data/data/: __init__.py  ncs_reference.json
skills/field-development/norwegian-continental-shelf-data/tests/: test_analysis.py  test_carbon.py  test_dataset.py  test_decline.py  test_reserves_and_sources.py
skills/process/compressor-antisurge-recycle/: README.md  SKILL.md  pyproject.toml
skills/process/compressor-antisurge-recycle/examples/: basic_compressor_antisurge_recycle.py
skills/process/compressor-antisurge-recycle/src/compressor_antisurge_recycle/: __init__.py  model.py
skills/process/compressor-antisurge-recycle/tests/: test_compressor_antisurge_recycle_model.py
skills/process/control-valve-cv-screening/: README.md  SKILL.md  pyproject.toml
skills/process/control-valve-cv-screening/examples/: basic_control_valve_cv_screening.py
skills/process/control-valve-cv-screening/src/control_valve_cv_screening/: __init__.py  model.py
skills/process/control-valve-cv-screening/tests/: test_control_valve_cv_screening.py
skills/process/process-factory/: README.md  SKILL.md  pyproject.toml
skills/process/process-factory/examples/: build_demo_plan.py
skills/process/process-factory/src/process_factory/: __init__.py  factory.py
skills/process/process-factory/tests/: test_factory.py
skills/process/teg-dehydration-modeling/: README.md  SKILL.md  pyproject.toml
skills/process/teg-dehydration-modeling/examples/: basic_teg_dehydration_modeling.py
skills/process/teg-dehydration-modeling/src/teg_dehydration_modeling/: __init__.py  plant.py
skills/process/teg-dehydration-modeling/tests/: test_teg_dehydration_modeling.py
skills/process/vfp-generation/: README.md  SKILL.md  pyproject.toml
skills/process/vfp-generation/examples/: vfp_demo.py
skills/process/vfp-generation/src/vfp_generation/: __init__.py  constraints.py  eclipse_vfp.py
skills/process/vfp-generation/tests/: test_vfp_generation.py
skills/pvt/e300-fluid-io/: README.md  SKILL.md  pyproject.toml
skills/pvt/e300-fluid-io/examples/: build_water_e300.py  sample_gas.e300
skills/pvt/e300-fluid-io/src/e300_fluid_io/: __init__.py  format.py  neqsim_bridge.py
skills/pvt/e300-fluid-io/tests/: test_e300_format.py
skills/pvt/pseudocomponent-split-characterization/: README.md  SKILL.md  pyproject.toml
skills/pvt/pseudocomponent-split-characterization/examples/: split_example.py
skills/pvt/pseudocomponent-split-characterization/src/pseudocomponent_split/: __init__.py  pa_split.py  split.py
skills/pvt/pseudocomponent-split-characterization/tests/: test_pa_split.py  test_split.py
skills/pvt/pvt-regression-characterization-factor/: README.md  SKILL.md  pyproject.toml
skills/pvt/pvt-regression-characterization-factor/examples/: regression_example.py
skills/pvt/pvt-regression-characterization-factor/src/pvt_regression/: __init__.py  regression.py
skills/pvt/pvt-regression-characterization-factor/tests/: test_regression.py
skills/pvt/reference-fluid-synthetic-generation/: README.md  SKILL.md  pyproject.toml
skills/pvt/reference-fluid-synthetic-generation/examples/: reference_fluid_example.py
skills/pvt/reference-fluid-synthetic-generation/src/reference_fluid/: __init__.py  generate.py
skills/pvt/reference-fluid-synthetic-generation/tests/: test_generate.py
skills/safety/gas-dispersion-distance-screening/: README.md  SKILL.md  pyproject.toml
skills/safety/gas-dispersion-distance-screening/examples/: basic_gas_dispersion_distance_screening.py
skills/safety/gas-dispersion-distance-screening/src/gas_dispersion_distance_screening/: __init__.py  model.py
skills/safety/gas-dispersion-distance-screening/tests/: test_gas_dispersion_distance_screening.py
skills/safety/jet-fire-radiation-screening/: README.md  SKILL.md  pyproject.toml
skills/safety/jet-fire-radiation-screening/examples/: basic_jet_fire_radiation_screening.py
skills/safety/jet-fire-radiation-screening/src/jet_fire_radiation_screening/: __init__.py  model.py
skills/safety/jet-fire-radiation-screening/tests/: test_jet_fire_radiation_screening.py
templates/skill-template/: README.md  SKILL.md  pyproject.toml
(+369 files in other folders)
