[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-skill-document-intelligence-extraction"
version = "0.1.0"
description = "Source-aware planning and traceable evidence contracts for engineering documents and images."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]
pdf = ["pdfplumber>=0.10", "pymupdf>=1.23"]
office = ["python-docx>=1.1", "openpyxl>=3.1"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10"]
all = [
  "pdfplumber>=0.10",
  "pymupdf>=1.23",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "pytesseract>=0.3.10",
  "Pillow>=10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
