[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-skill-norwegian-continental-shelf-data"
version = "0.3.0"
description = "Public Norwegian Continental Shelf reference facts, carbon-cost basis, and screening-analysis helpers for NeqSim community examples."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]
neqsim = ["neqsim"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
norwegian_continental_shelf_data = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
