[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-skill-compressor-antisurge-recycle"
version = "0.1.0"
description = "Educational compressor anti-surge recycle setup skill for NeqSim community examples."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]
neqsim = ["neqsim"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
