[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-skill-teg-dehydration-modeling"
version = "0.1.0"
description = "Build a validated, closed-loop NeqSim TEG dehydration plant with regeneration, recycles, and still-vent emission classification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "neqsim-community" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]
neqsim = ["neqsim"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
