[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-skill-vfp-generation"
version = "0.1.0"
description = "Constraint classification and Eclipse VFPPROD lift-curve import/export for compression facilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "neqsim-community" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]
neqsim = ["neqsim"]
plot = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
